--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styleSheet.css">
 </head>
 <body>
-    <audio autoplay loop >
+    <audio autoplay loop controls>
         <source src="calming-rain.mp3" type="audio/mp3">
     </audio>
     <div class="video-background"> 
@@ -32,4 +32,5 @@
 
     </script>
 </body>
+
 </html>
